app/styles/module/_organise-bar.scss
.organise-bar{
	display:none;

	@include breakpoint(tablet, height){
		padding-top: 21px;
	}
	&.bottom{
		height:70px;
	}
	body.organise & {
		display:block;
	}
	&.top{
		padding-top:14px;
		border-bottom: 0;
	}
	.title{
		position:absolute;
		margin-top: 7px;
		left: 86px;
		text-align: left; 
		@include breakpoint(mobile){
			left:50%;
			margin-left:-200px;
			text-align: center;
		}
		width:400px;
		font-size:17px;

	}
	.start-day-section{
		margin-right: -20px;
		&.active{
			.start-day-button{
				background: $red;
			}
		}
		.start-day-button{
			width:140px;
			background: $unselected-color;
			
			color:white;
			height:40px;
			line-height:40px;
			font-size:14px;
			@include border-radius(20px);
		}
	}
	.counting-selected{
		position:absolute;
		left:95px;
		@include breakpoint(tablet) {
			left:167px;
		}
		margin-top: 2px;
		.selected-label{
			width:30px;
			height:30px;
			line-height: 30px;
			font-size:18.5px;
		}
	}
}

